src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/instanceOf_String.deca
// Description:
//   test sortie instanceof != string. Non affichable
//
// Resultats:
//    Erreur contextuelle ligne 12
//    type non affichable(les types qu'on peut afficher sont int,float et string)
class A{
    int x = 0;
}
{
    A a = new A();
    println(a instanceof A);
}
